--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,28 +1,8 @@
-<nav></nav>
 <div class="jumbotron">
   <h1> Digital Participation Camp & Summit</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
+    <img src="images/dpc_small.png" alt="Digital Participation Camp & Summit logo"><br>
     An easy way to connect
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
-
-<div class="footer">
-  <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+  <p><a class="btn btn-lg btn-success" ng-href="#/register">Cool, Lets Participate!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
