--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -4,5 +4,5 @@
     <li><a ng-href="#/teams">Teams</a></li>
     <li><a ng-href="#">Contact</a></li>
   </ul>
-  <h3 class="text-muted">DPC Easy</h3>
+  <h3 class="text-muted" style="padding-left: 20px;">DPC Easy</h3>
 </div>
