--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -2,7 +2,7 @@
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="#">Home</a></li>
     <li><a ng-href="#/teams">Teams</a></li>
-    <li><a ng-href="#">Contact</a></li>
+    <li><a ng-href="#/projects">Projects</a></li>
   </ul>
   <h3 class="text-muted" style="padding-left: 20px;">DPC Easy</h3>
 </div>
