--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -77,3 +77,8 @@ body {
     border-bottom: 0;
   }
 }
+.gridStyle {
+    border: 1px solid rgb(212,212,212);
+    width: 400px; 
+    height: 300px
+}
