--- a/app/views/teams.html
+++ b/app/views/teams.html
@@ -1,8 +1,7 @@
 <tabset>
 <tab heading="Add">
-<div class="row">
-  <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2">
-    <form role="form" name="teamAddForm" id="teamAddForm" ng-submit="add(model)">
+    <form role="form" name="teamAddForm" id="teamAddForm" ng-submit="add(model)"
+      style="margin: 20px;">
       <div class="form-group">
         <input type="text" name="name" id="name"
         class="form-control input-lg" placeholder="Name" tabindex="1"
@@ -19,8 +18,6 @@
           value="Add" class="btn btn-primary btn-block btn-lg" tabindex="3"></div>
       </div>
     </form>
-  </div>
-</div>
 </tab>
 <tab heading="List">
 <div class="row">
