--- a/app/views/register.html
+++ b/app/views/register.html
@@ -31,14 +31,24 @@
         ng-model="model.email">
       </div>
       <div class="form-group">
-        <textarea name="description" id="description" class="form-control input-lg"
-          placeholder="Short Description about yourself" tabindex="5"
-          ng-model="model.description"></textarea>
+        <input type="country" name="country" id="country" class="form-control
+        input-lg" placeholder="Name of your country" tabindex="5"
+        ng-model="model.country">
+      </div>
+      <div class="form-group">
+        <textarea name="skills" id="skills" class="form-control input-lg"
+          placeholder="Comma separated names of the skills you excel at." tabindex="6"
+          ng-model="model.skillsText"></textarea>
+      </div>
+      <div class="form-group">
+        <textarea name="bio" id="bio" class="form-control input-lg"
+          placeholder="Short bio about yourself" tabindex="7"
+          ng-model="model.bio"></textarea>
       </div>
       <hr class="colorgraph">
       <div class="row">
         <div class="col-xs-12 col-md-6 col-md-offset-6"><input type="submit"
-          value="Cool, I'm Done." class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
+          value="Cool, I'm Done." class="btn btn-primary btn-block btn-lg" tabindex="8"></div>
       </div>
     </form>
   </div>
