Adding users and profiles linked

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -4,7 +4,7 @@
           <a href="#aboutModal" data-toggle="modal" data-target="#myModal">
             <img src="" name="aboutme" width="140" height="140" class="img-circle">
           </a>
-        <h3>{{model.get('first_name')}} {{model.get('last_name')}}</h3>
+        <h3>{{model.get('display_name')}}</h3>
         <em>click my face for more</em>
     </center>
     </div>
