--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -27,12 +27,14 @@
         <td data-title="'Name'">{{group.get("name")}}</td>
         <td data-title="'Participants'">{{group.get("participants").length}}</td>
         <td data-title="'Actions'">
-          <button class="btn btn-danger" ng-click="remove(group)">
-            <i class="glyphicons glyphicons-remove"></i>Remove </button>
+          <button class="btn btn-danger pull-right" ng-click="remove(group)">
+            <i class="glyphicon glyphicon-remove"></i></button>
         </td>
       </tr>
     </table>
   </div>
 </div>
+</tab>
+<tab heading="Visualization">
 </tab>
 </tabset>
