--- a/app/views/register.html
+++ b/app/views/register.html
@@ -5,6 +5,27 @@
       <h2><small>It's free and always will be.</small></h2>
       <hr class="colorgraph">
       <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          <div class="form-group">
+            <input type="text" name="username" id="username"
+            class="form-control input-lg" placeholder="Username" tabindex="1"
+            ng-model="security.username">
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="form-group">
+            <input type="password" name="password" id="password"
+            class="form-control input-lg" placeholder="Password" tabindex="1"
+            ng-model="security.password">
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="form-group">
+            <input type="password" name="cpassword" id="cpassword"
+            class="form-control input-lg" placeholder="Confirm Password" tabindex="1"
+            ng-model="security.cpassword">
+          </div>
+        </div>
         <div class="col-xs-12 col-sm-6 col-md-6">
           <div class="form-group">
             <input type="text" name="first_name" id="first_name"
@@ -28,7 +49,7 @@
       <div class="form-group">
         <input type="email" name="email" id="email" class="form-control
         input-lg" placeholder="Email Address" tabindex="4"
-        ng-model="model.email">
+        ng-model="security.email">
       </div>
       <div class="form-group">
         <input type="country" name="country" id="country" class="form-control
