--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,1 +1,28 @@
-<p>This is the login view.</p>
+<div class="container" style="margin-top:30px">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          <strong>Sign in </strong>
+        </h3>
+      </div>
+      <div class="panel-body">
+        <form role="form" name="signinForm" ng-submit="login(security)">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" style="border-radius:0px"
+            id="username" placeholder="Enter username" ng-model="security.username">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">
+              Password <a href="javascript:;">(forgot password)</a></label>
+            <input type="password" class="form-control" style="border-radius:0px"
+            id="password" placeholder="Password"
+           ng-model="security.password">
+          </div>
+          <button type="submit" class="btn btn-sm btn-default">Sign in</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
