--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -3,19 +3,25 @@
     <li ng-class="{active: path === '/'}">
     <a ng-href="#"><i class="glyphicon glyphicon-home"></i> Home</a>
     </li>
-    <li ng-class="{active: path === '/teams'}">
+    <li ng-class="{active: path === '/teams'}" ng-if="user">
     <a ng-href="#/teams">
       <i class="glyphicon glyphicon-heart"></i> Teams</a>
     </li>
-    <li ng-class="{active: path === '/projects'}">
+    <li ng-class="{active: path === '/projects'}" ng-if="user">
     <a ng-href="#/projects">
       <i class="glyphicon glyphicon-camera"></i> Projects</a>
     </li>
-    <li ng-class="{active: path === '/profile'}">
+    <li ng-class="{active: path === '/profile'}" ng-if="user">
     <a ng-href="#/profile"><i class="glyphicon glyphicon-user"></i> Profile</a></li>
-    <li ng-class="{active: path === '/login'}">
+
+    <li ng-class="{active: path === '/login'}" ng-if="!user">
     <a ng-href="#/login">
-      <i class="glyphicon glyphicon-off"></i> Login</a>
+      <i class="glyphicon glyphicon-user"></i> Login</a>
+    </li>
+
+    <li ng-class="{active: path === '/login'}" ng-if="user">
+    <a href="javascript:;" ng-click="logout()">
+      <i class="glyphicon glyphicon-off"></i> Logout</a>
     </li>
   </ul>
   <h3 class="text-muted" style="padding-left: 20px;">DPC Easy</h3>
