Updating teams graph

--- a/app/views/teams.html
+++ b/app/views/teams.html
@@ -36,6 +36,6 @@
 </div>
 </tab>
 <tab heading="Visualization">
-  <teams-graph data="teams"></teams-graph>
+  <teams-graph graph-data="teamsGraph"></teams-graph>
 </tab>
 </tabset>
