Adding project graph

--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -36,6 +36,6 @@
 </div>
 </tab>
 <tab heading="Visualization">
-  <projects-graph data="projects"></projects-graph>
+  <projects-graph graph-data="projectsGraph"></projects-graph>
 </tab>
 </tabset>
