Updating the title and the main page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1> Digital Participation Camp & Summit</h1>
+  <h1> Digital Participation Camp</h1>
   <p class="lead">
     <img src="images/dpc_small.png" alt="Digital Participation Camp & Summit logo"><br>
     An easy way to connect
