--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -24,5 +24,5 @@
       <i class="glyphicon glyphicon-off"></i> Logout</a>
     </li>
   </ul>
-  <h3 class="text-muted" style="padding-left: 20px;">DPC Easy</h3>
+  <h3 class="text-muted" style="padding-left: 20px;">Digital Participation Camp</h3>
 </div>
