Adding titles and updating graph height

--- a/app/views/projects.html
+++ b/app/views/projects.html
@@ -1,3 +1,4 @@
+<h2> Projects </h2>
 <tabset>
 <tab heading="Add">
     <form role="form" name="projectAddForm" id="projectAddForm" ng-submit="add(model)"
