--- a/app/views/register.html
+++ b/app/views/register.html
@@ -66,6 +66,20 @@
           placeholder="Short bio about yourself" tabindex="7"
           ng-model="model.bio"></textarea>
       </div>
+
+      <div class="form-group" ng-if="teams">
+        Team:
+        <select ng-options="team as team.get('name') for team in teams"
+          ng-model="model.team" ></select>
+      </div>
+
+      <div class="form-group" ng-if="projects">
+        Project:
+        <select ng-options="project as project.get('name') for project in projects"
+          ng-model="model.project">
+        </select>
+      </div>
+
       <hr class="colorgraph">
       <div class="row">
         <div class="col-xs-12 col-md-6 col-md-offset-6"><input type="submit"
