--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -44,13 +44,13 @@
 
       <div class="form-group">
         Team:
-        <select ng-options="team as team.get('name') for team in teams"
+        <select class="form-control" ng-options="team as team.get('name') for team in teams"
           ng-model="model.team" ></select>
       </div>
 
       <div class="form-group">
         Project:
-        <select ng-options="project as project.get('name') for project in projects"
+        <select class="form-control" ng-options="project as project.get('name') for project in projects"
           ng-model="model.project">
         </select>
       </div>
