--- a/app/views/register.html
+++ b/app/views/register.html
@@ -69,13 +69,13 @@
 
       <div class="form-group" ng-if="teams">
         Team:
-        <select ng-options="team as team.get('name') for team in teams"
+        <select class="form-control" ng-options="team as team.get('name') for team in teams"
           ng-model="model.team" ></select>
       </div>
 
       <div class="form-group" ng-if="projects">
         Project:
-        <select ng-options="project as project.get('name') for project in projects"
+        <select  class="form-control" ng-options="project as project.get('name') for project in projects"
           ng-model="model.project">
         </select>
       </div>
